--- a/pagina-4.html
+++ b/pagina-4.html
@@ -4,15 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Oscar Rodrigues Da Silva Neto">
-    <meta name="description" content="Exercício 3">
+    <meta name="description" content="Exercício 4">
     <link rel="stylesheet" type="text/css" href="css.css">
-    <title>Exercício 3</title>
+    <title>Exercício 4</title>
 </head>
 
 <body>
     <div class="cabecalho">
         <header>
             <p>Nome da Empresa</p>
+            <div class="Links-header">
+                <nav class="menu">
+                    <ul>
+                        <li><a href="pagina-1.html">Link 1</a></li>
+                        <li><a href="pagina-2.html">Link 2</a></li>
+                        <li><a href="pagina-3.html">Link 3</a></li>
+                        <li><a href="pagina-4.html">Link 4</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
     </div>
 
