--- a/pagina-2.html
+++ b/pagina-2.html
@@ -1,27 +1,46 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Exercício 2</title>
-        <meta name="author" content="Oscar Rodrigues Da Silva Neto">
-        <meta name="description" content="Página do exercício 2">
-        <link rel="stylesheet" type="text/css" href="css.css">
 
-    </head>
-    <body>
-        <div class="principal">
-            <h1>Título</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus non doloremque libero consequatur. Error excepturi obcaecati nihil autem praesentium ab repellendus consectetur itaque alias, exercitationem, est voluptatum saepe, neque ad.</p>    
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A dicta hic aliquam ipsam voluptatem natus consequatur quas doloribus, officiis optio laborum. Illo ab molestiae, soluta eum voluptate obcaecati ipsa? Assumenda.</p>
-        </div>
+<head>
+    <meta charset="utf-8">
+    <title>Exercício 2</title>
+    <meta name="author" content="Oscar Rodrigues Da Silva Neto">
+    <meta name="description" content="Página do exercício 2">
+    <style>
+        .principal{
+            margin-left: 5%;
+            margin-right: 5%;
+            margin-bottom: 2%;
+        }
+        .secundario{
+             margin-left: 5%;
+             margin-right: 5%;
+        }
 
-        <div class="secundario">
-            <h2>Subtítulo</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo doloribus modi esse. Necessitatibus illum nulla labore officiis ipsa? Reiciendis praesentium itaque tenetur. Temporibus aliquam animi eos debitis. Repudiandae, natus culpa.</p>
-            
-        </div>
+    </style>
+
+</head>
+
+<body>
+    <div class="principal">
+        <h1>Título</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus non doloremque libero consequatur. Error
+            excepturi obcaecati nihil autem praesentium ab repellendus consectetur itaque alias, exercitationem, est
+            voluptatum saepe, neque ad.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A dicta hic aliquam ipsam voluptatem natus
+            consequatur quas doloribus, officiis optio laborum. Illo ab molestiae, soluta eum voluptate obcaecati ipsa?
+            Assumenda.</p>
+    </div>
+
+    <div class="secundario">
+        <h2>Subtítulo</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo doloribus modi esse. Necessitatibus illum
+            nulla labore officiis ipsa? Reiciendis praesentium itaque tenetur. Temporibus aliquam animi eos debitis.
+            Repudiandae, natus culpa.</p>
+
+    </div>
 
 
-    </body>
+</body>
 
 </html>
