--- a/exercicio-1/pagina-1.html
+++ b/exercicio-1/pagina-1.html
@@ -6,13 +6,7 @@
     <title>Exercício 1</title>
     <meta name="author" content="Demetrio Gomes Mestre">
     <meta name="description" content="Página 1 do primeiro exercício de Programação para Web">
-    <style>
-        .principal {
-            margin-left: 5%;
-            margin-right: 5%;
-            margin-bottom: 5%;
-        }
-    </style>
+   <link rel="stylesheet" type="text/css" href="css.css">
 </head>
 
 <body>
