--- a/exercicio-1/pagina-2.html
+++ b/exercicio-1/pagina-2.html
@@ -6,18 +6,7 @@
     <title>Exercício 2</title>
     <meta name="author" content="Oscar Rodrigues Da Silva Neto">
     <meta name="description" content="Página do exercício 2">
-    <style>
-        .principal{
-            margin-left: 5%;
-            margin-right: 5%;
-            margin-bottom: 2%;
-        }
-        .secundario{
-             margin-left: 5%;
-             margin-right: 5%;
-        }
-
-    </style>
+    <link rel="stylesheet" type="text/css" href="css.css">
 
 </head>
 
@@ -30,15 +19,13 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A dicta hic aliquam ipsam voluptatem natus
             consequatur quas doloribus, officiis optio laborum. Illo ab molestiae, soluta eum voluptate obcaecati ipsa?
             Assumenda.</p>
-    </div>
-
-    <div class="secundario">
         <h2>Subtítulo</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo doloribus modi esse. Necessitatibus illum
             nulla labore officiis ipsa? Reiciendis praesentium itaque tenetur. Temporibus aliquam animi eos debitis.
             Repudiandae, natus culpa.</p>
-
     </div>
+
+
 
 
 </body>
