--- a/exercicio-1/html/pagina-1.html
+++ b/exercicio-1/html/pagina-1.html
@@ -6,20 +6,21 @@
     <title>Exercício 1</title>
     <meta name="author" content="Demetrio Gomes Mestre">
     <meta name="description" content="Página 1 do primeiro exercício de Programação para Web">
-   <link rel="stylesheet" type="text/css" href="css.css">
+    <link rel="stylesheet" type="text/css" href="../css/css.css">
 </head>
 
 <body>
-    <div class="principal">
-        <h1>Título</h1>
-        <article>
+    <main class="principal">
+        <h1 class=principal__titulo>Título</h1>
+        <article class=principal__conteudo>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras quis sodales magna, sed malesuada eros.
                 Donec odio sapien, suscipit auctor mollis a, auctor vitae lectus.</p>
-            <p>Morbi est enim, lacinia sit amet libero vel, egestas vestibulum felis. Etiam ut feugiat nulla, sit amet
+            <p>Morbi est enim, lacinia sit amet libero vel, egestas vestibulum felis. Etiam ut feugiat nulla, sit
+                amet
                 pellentesque quam. Integer enim lacus, volutpat eget maximus sed, convallis quis mi. Suspendisse
                 pulvinar id nulla a condimentum. Nam nec ultricies mi. Donec et elit risus.</p>
         </article>
-    </div>
+    </main>
 </body>
 
 </html>
