--- a/exercicio-3/Projeto_treino/contatos.html
+++ b/exercicio-3/Projeto_treino/contatos.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class = "cabecalho">
-        <a href="index.html" class="logo">Programação para Web I</a>
+        <a href="index.html" class="logo">Programação para Web Ib</a>
         <nav>
           <button class="menu-principal__btn">Abrir/fechar Menu</button class = "menu-principal__btn--fechar">
             <ul class="menu-principal__lista">
